# qubee-nlp

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  test_before_publish.sh
docs/: conf.py  index.md  index.rst  requirements.txt
docs/api/: Corpus.md  alphabet.md  stemmer.md  tokenizer.md
docs/source/: conf.py
docs/tutorials/: afaan_oromoo_nlp.md  getting_started.md
examples/: advanced_features.py  basic_usage.py  stemming_example.py  tokenization_example.py
scripts/: benchmark.py  build_corpus.py  download_data.py
src/qubee_nlp/: __init__.py  alphabet.py  normalizer.py  stemmer.py  stopwords.py  syllabifier.py  tokenizer.py
src/qubee_nlp/pos/: __init__.py  tagger.py  tagsets.py
src/qubee_nlp/utils/: __init__.py  helpers.py  validation.py
tests/: fix_all_tests.py  test_alphabet.py  test_corpus.py  test_normalizer.py  test_stemmer.py  test_syllabifier.py  test_tokenizer.py
tests/test_pos/: conftest.py  test_tagger.py
