[build-system]
requires = ["setuptools>=61.0", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "qubee-nlp"
version = "0.1.1"
description = "Natural Language Processing tools for Afaan Oromoo (Oromo language) using Qubee script"
readme = "README.md"
requires-python = ">=3.7"

authors = [
    { name = "Qubee NLP Team", email = "contact@qubeenlp.org" }
]

maintainers = [
    { name = "Afaan Oromoo NLP Community", email = "community@qubeenlp.org" }
]

license = { file = "LICENSE" }

keywords = [
    "nlp",
    "oromo",
    "afaan oromoo",
    "qubee",
    "tokenization",
    "oromiffa",
    "language-processing",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Linguistic"
]

dependencies = [
    "typing-extensions>=4.0.0; python_version < '3.8'"
]

[project.urls]
Homepage = "https://github.com/GUUTA/qubee-nlp"
Documentation = "https://qubee-nlp.readthedocs.io"
Repository = "https://github.com/GUUTA/qubee-nlp"
Changelog = "https://github.com/GUUTA/qubee-nlp/blob/main/CHANGELOG.md"
Issues = "https://github.com/GUUTA/qubee-nlp/issues"
Discussions = "https://github.com/GUUTA/qubee-nlp/discussions"
Funding = "https://opencollective.com/qubee-nlp"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "flake8-docstrings>=1.7.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
    "twine>=4.0.0",
    "build>=0.10.0",
    "ipython>=8.0.0",
    "jupyter>=1.0.0"
]

docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "sphinx-autodoc-typehints>=1.0.0",
    "myst-parser>=2.0.0"
]

test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.0.0",
    "pytest-mock>=3.0.0",
    "hypothesis>=6.0.0"
]

full = [
    "numpy>=1.21.0",
    "scikit-learn>=1.0.0",
    "pandas>=1.3.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "requests>=2.28.0",
    "tqdm>=4.64.0"
]

[project.scripts]
qubee-nlp = "qubee_nlp.cli:main"

[project.entry-points."qubee_nlp.plugins"]
alphabet = "qubee_nlp.alphabet:QubeeAlphabet"
tokenizer = "qubee_nlp.tokenizer:QubeeTokenizer"
stemmer = "qubee_nlp.stemmer:QubeeStemmer"

[tool.setuptools]
packages = [
    "qubee_nlp",
    "qubee_nlp.pos",
    "qubee_nlp.utils",
    "qubee_nlp.corpus",
    "qubee_nlp.data"
]
include-package-data = true
zip-safe = false

[tool.setuptools.package-data]
qubee_nlp = [
    "corpus/*.txt",
    "data/*.json",
    "py.typed"
]

[tool.black]
line-length = 88
target-version = ["py37", "py38", "py39", "py310", "py311"]
include = '\\.pyi?$'  # <-- ESCAPED BACKSLASH

[tool.isort]
profile = "black"
known_first_party = ["qubee_nlp"]

[tool.mypy]
python_version = "3.7"
strict = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--tb=short",
    "--durations=10",
    "--cov=qubee_nlp",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml"
]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["qubee_nlp"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/setup.py",
    "*/__pycache__/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\\\bProtocol\\):",   # double backslash
    "@(abc\\\\.)?abstractmethod"   # double backslash
]

[metadata]
license_files = ["LICENSE"]
