[metadata]
name = qubee-nlp
version = 0.1.0  # REMOVE attr: reference - use static version
author = Qubee NLP Team
author_email = contact@qubeenlp.org
maintainer = Afaan Oromoo NLP Community
maintainer_email = community@qubeenlp.org
description = Natural Language Processing tools for Afaan Oromoo (Oromo language) using Qubee script
long_description = file: README.md
long_description_content_type = text/markdown
keywords = nlp, oromo, afaan oromoo, qubee, tokenization, oromiffa, language-processing
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: Oromo
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Human Machine Interfaces
    Topic :: Software Development
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Text Processing
    Topic :: Text Processing :: Linguistic
project_urls =
    Homepage = https://github.com/afaanoromoo/qubee-nlp
    Documentation = https://qubee-nlp.readthedocs.io
    Repository = https://github.com/afaanoromoo/qubee-nlp
    Changelog = https://github.com/afaanoromoo/qubee-nlp/blob/main/CHANGELOG.md
    Issues = https://github.com/afaanoromoo/qubee-nlp/issues
    Discussions = https://github.com/afaanoromoo/qubee-nlp/discussions
    Funding - Open Collective = https://opencollective.com/qubee-nlp
    Funding - GitHub Sponsors = https://github.com/sponsors/afaanoromoo

[options]
package_dir = =src
packages = find:
python_requires = >=3.7
install_requires =
    typing-extensions>=4.0.0; python_version<'3.8'
include_package_data = True
zip_safe = False

[options.packages.find]
where = src
exclude = 
    tests
    tests.*
    examples
    examples.*

[options.entry_points]
console_scripts =
    qubee-nlp = qubee_nlp.cli:main

[options.extras_require]
dev =
    pytest>=7.0.0
    pytest-cov>=4.0.0
    pytest-xdist>=3.0.0
    black>=23.0.0
    flake8>=6.0.0
    flake8-docstrings>=1.7.0
    mypy>=1.0.0
    pre-commit>=3.0.0
    twine>=4.0.0
    build>=0.10.0
    ipython>=8.0.0
    jupyter>=1.0.0
docs =
    sphinx>=7.0.0
    sphinx-rtd-theme>=1.0.0
    sphinx-autodoc-typehints>=1.0.0
    myst-parser>=2.0.0
test =
    pytest>=7.0.0
    pytest-cov>=4.0.0
    pytest-xdist>=3.0.0
    pytest-mock>=3.0.0
    hypothesis>=6.0.0
full =
    numpy>=1.21.0
    scikit-learn>=1.0.0
    pandas>=1.3.0
    matplotlib>=3.5.0
    seaborn>=0.11.0
    requests>=2.28.0
    tqdm>=4.64.0

[flake8]
max-line-length = 88
extend-ignore =
    E203,  # whitespace before ':' (conflicts with black)
    W503,  # line break before binary operator
    E501,  # line too long (handled by black)
exclude =
    .git,
    __pycache__,
    build,
    dist,
    .eggs,
    *.egg,
    .tox,
    .venv,
    venv,
    env,
    .mypy_cache,
    .pytest_cache,
    .coverage,
per-file-ignores =
    __init__.py:F401
    tests/*:S101